# BP_Jabukod

./: .gitignore  README.md  TODO  a.out  c.c  handin_README.md
assembly/: atat.s  intel.asm
assembly/MMIO/: mmio.s
assembly/atat/: atat
assembly/experiments/atat/: atat.s
assembly/experiments/intel/: intel.asm
assembly/intel/: intel
docs/: Doxyfile
grammar/: Jabukod.dox  Jabukod.g4
grammar/notes/: C.g4  initial_Jabukod_grammar.txt
profile/: profile.py
profiling/: C_comparison.sh  C_comparison_noIO.sh  C_comparison_noIO_memory.sh  jabukod_vs_C.sh  obfuscation_noIO.sh  obfuscation_noIO_fileSize.sh  obfuscation_noIO_memory.sh  obfuscations.sh  profile.py  profile.sh  profile.txt
profiling/C/: ackermann.c  binary_search.c  quick_sort.c
profiling/MEASUREMENTS_FOR_THESIS_TEXT/: C_ackermann.massif.out  C_noIO-measurement.txt  binary_search.massif.out  obfuscation_noIO-fileSize.txt  obfuscation_noIO-measurement.txt  quick_sort.massif.out
profiling/MEASUREMENTS_FOR_THESIS_TEXT/massif/: ackermann_all.massif.out  ackermann_array.massif.out  ackermann_clone.massif.out  ackermann_interleave.massif.out  ackermann_opaque.massif.out  ackermann_signedness.massif.out  binary_search.massif.out  binary_search_all.massif.out  binary_search_clone.massif.out  exp_all.massif.out  exp_array.massif.out  exp_interleave.massif.out  exp_opaque.massif.out  gcd_array.massif.out  gcd_clone.massif.out  gcd_interleave.massif.out  (+7 more)
profiling/jabukod/: ackermann.jk  exp.jk  quick_sort.jk
profiling/measurements_1/: C_binary_search.massif.out  C_quick_sort.massif.out  ackermann.massif.out
profiling/measurements_2/: jabukod_vs_C.txt  obfuscations.txt
profiling/noIO_C/: ackermann_noIO.c  binary_search_noIO.c  quick_sort_noIO.c
profiling/noIO_programs/: exp.jk  gcd.jk  quick_sort.jk
profiling/no_IO/: ackermann.jk  binary_search.jk
profiling/programs/: ackermann.jk  binary_search.jk  exp.jk  gcd.jk  quick_sort.jk
project/: CMakeLists.txt  Compile.cpp  Jabukod.g4  SemanticErrors.h  common.h  main.cpp  main.h
project/cmake/: ExternalAntlr4Cpp.cmake
project/include/: ASTGenerationListener.h  ASTGenerationVisitor.h  Assembler.h  CallGraphListener.h  CodeGenerator.h  Compile.h  CustomErrorListener.h  Escapes.h  Generator.h  GlobalSymbolsVisitor.h  ProgramArguments.h  SemanticErrors.h  SymTabGlobalsVisitor.h  TestListener.h  TestVisitor.h
project/include/AST/: AST.h  ASTNode.h  Conversion.h  NodeKind.h  TypeChecking.h
project/include/AST/NodeData/: GenericNodeData.h  SpecificNodeData.h
project/include/AST/NodeData/SpecificNodeData/: BodyData.h  ExpressionData.h  ForData.h  ForeachData.h  FunctionCallData.h  FunctionData.h  LiteralData.h  VariableData.h
project/include/ErrorListeners/: LexerErrorListener.h  ParserErrorListener.h
project/include/Generation/: GenMethods.h  Instruction.h  NodeGenerators.h
project/include/Generation/Assembly/: GeneralMacros.h  Opcodes.h  Registers.h  System.h
project/include/Generation/GenerationMethods/: ControlFlow.h  Snippets.h  Transform.h
project/include/Obfuscation/: Obfuscate.h  Obfuscate3AC.h  ObfuscateAST.h  Pseudorandom.h
project/include/SymbolTable/: EnumTable.h  EnumTableEntry.h  FunctionTable.h  FunctionTableEntry.h  Scope.h  ScopeEntry.h  Specifier.h  SymbolTable.h  type.h
project/include/SymbolTable/Value/: BaseValue.h  EnumItem.h  Parameter.h  Specifier.h  Type.h  Variable.h
project/include/dev/: CallGraphListener.h
project/src/: ASTGenerationListener.cpp  ASTGenerationVisitor.cpp  Assembler.cpp  CMakeLists.txt  CallGraphListener.cpp  CodeGenerator.cpp  Compile.cpp  CustomErrorListener.cpp  Escapes.cpp  Generator.cpp  GlobalSymbolsVisitor.cpp  ProgramArguments.cpp  SymTabGlobalsVisitor.cpp  TestListener.cpp  TestVisitor.cpp
project/src/AST/: AST.cpp  ASTNode.cpp  Conversion.cpp  NodeKind.cpp  TypeChecking.cpp
project/src/AST/NodeData/: GenericNodeData.cpp  SpecificNodeData.cpp
project/src/AST/NodeData/SpecificNodeData/: BodyData.cpp  ExpressionData.cpp  ForData.cpp  ForeachData.cpp  FunctionCallData.cpp  FunctionData.cpp  LiteralData.cpp  VariableData.cpp
project/src/CodeGenerator/: CodeGenerator.cpp  CodeGeneratorNodes.cpp
project/src/ErrorListeners/: LexerErrorListener.cpp  ParserErrorListener.cpp
project/src/Generation/: Assembler.cpp  GenMethods.cpp  Instruction.cpp  NodeGenerators.cpp
project/src/Generation/Assembly/: Opcodes.cpp  Registers.cpp
project/src/Generation/GenerationMethods/: ControlFlow.cpp  Snippets.cpp  Transform.cpp
project/src/Obfuscation/: Obfuscate3AC.cpp  ObfuscateAST.cpp  ObfuscationMethods.cpp  Pseudorandom.cpp
project/src/SymbolTable/: EnumTable.cpp  EnumTableEntry.cpp  FunctionTable.cpp  FunctionTableEntry.cpp  Scope.cpp  ScopeEntry.cpp  Specifier.cpp  SymbolTable.cpp  Type.cpp  type.cpp
project/src/SymbolTable/Value/: BaseValue.cpp  EnumItem.cpp  Parameter.cpp  Specifier.cpp  Type.cpp  Variable.cpp
project/src/dev/: CallGraphListener.cpp
samples/: BUG.jk  ackermann.jk  binary_search.jk  bubble_sort.jk  callGraph.jk  error1.jk  error2.jk  exp.jk  fact.jk  fibonacci.jk  first.jk  gcd.jk  hello.jk  isPrime.jk  is_prime.jk  jabu_kod.pas.jk  mistype.jk  multiplication_table.jk  multiplication_table2.jk  quick_sort.jk  statements.jk  symTab.jk  thesis_example_error1.jk  thesis_example_error2.jk  write_float.jk  write_int.jk  xor_swap.jk
samples/BUGS/: assign_string.jk  float_array.jk  return.jk  string.jk  unicode.jk
samples/CONCEPTS/: IO.jk
samples/OLD/: precedence1.jk  unicode.jk
samples/brainfuck/: brainfuck.jk  jabufuck.jk  prepare.py
samples/generator/: hello.jk
samples/rules/: FLOAT_LITERAL.jk  LITERAL.jk  expression.jk  flowControl.jk  fors.jk  functionDefinition.jk  variableDeclaration.jk
samples/semantics/: bug.jk  callGraph.jk  debug.jk  statements.jk  symTab.jk
samples/thesis_text/: basic_block.jk  excel_at_FIT_logo.jk  thesis_example_error1.jk  thesis_example_error2.jk
src/: CMakeLists.txt  main.cpp
test_programs/obfuscation/: opaque.jk  opaque3.jk  restructure_array.jk  signedness.jk
test_programs/semantics/: statements.jk  symTab.jk
(+402 files in other folders)
